--- a/client/src/components/home/HomePage.css
+++ b/client/src/components/home/HomePage.css
@@ -3,11 +3,13 @@
 	text-align: center;
 }
 
-.card-body .justify{
-	
+.justify{
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-
+.container{
+margin-right: 5%;
+margin-left: 5%;
+max-width: 90%;
+}
