Dashboard working beautifully, ready to load plans from specific user

--- a/client/src/components/home/HomePage.css
+++ b/client/src/components/home/HomePage.css
@@ -13,3 +13,9 @@ margin-right: 5%;
 margin-left: 5%;
 max-width: 90%;
 }
+
+.home-buttons{
+	background-color: #424242!important;
+	outline-style: solid;
+	color:white!important;
+}
